# digraph-io-analysis

./: .gitignore  AGENTS.md  README.md  entropy_spec_report.md  pyproject.toml  transition_digraph.gexf
examples/: demo_analysis.py  demo_custom_column.py  simple_entropy_check.py  test_analysis.py  test_step_size.py
src/digraph_inout_analysis/: __init__.py  core.py  visualization.py
tests/: test_duration_filter.py  test_entropy.py  test_filtering.py  test_integration.py  verify_pipeline_duration.py
tsv/: Re_14000_20k_snapshot_1_0.0005.tsv
