[project]
name = "digraph-inout-analysis"
version = "0.1.3"
description = "Directed graph analysis for discrete dynamical systems using in-degree/out-degree entropy"
readme = "README.md"
authors = [
    { name = "Tomoki Uda", email = "tomoki.uda@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6.1",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
